Session one notes

--- a/Session-1/grid.html
+++ b/Session-1/grid.html
@@ -31,6 +31,13 @@
             </div>
         </div>
 
+        <h1 class="h1"> Headings 1</h1>
+        <h2> Headings 2</h2>
+        <h3> Headings 3</h3>
+        <h4> Headings 4</h4>
+        <h5 class="h5"> Headings 5</h5>
+        <h6> Headings 6</h6>
+
 
     </div>
     
