--- a/Session-2/typeaheads.html
+++ b/Session-2/typeaheads.html
@@ -17,10 +17,12 @@
 
     <h1>Typeaheds</h1>
     <form action="#" method="post">
-        <label for="fname">First Name</label>
-        <input type="text" id="query" name="query" placeholder="Enter your First Name" class="typeahead" data-provider="typeahead">
+        <fieldset disabled>
+            <label for="fname">First Name</label>
+            <input type="text" id="query" name="query" placeholder="Enter your First Name" class="typeahead" data-provider="typeahead">
+        </fieldset>
     </form>
-    
+    <!--typeahead java script-->
     <script type="text/javascript">
         $(document).ready(function(){
             var names=['NIKUNJ','NILESH','SANDEEP','AMAR','SANKALP','SAKSHI','ALEXA','ARVIND'];
