--- a/Session-2/nav.html
+++ b/Session-2/nav.html
@@ -13,19 +13,19 @@
 
     <ul class="nav nav-pills">
         <li class="nav-item">
-            <a href="index.html" class="nav-link" >HOME</a>
+            <a href="#" class="nav-link" >HOME</a>
         </li>
         <li class="nav-item">
-            <a href="aboutus.html" class="nav-link" >About Us</a>
+            <a href="#" class="nav-link" >About Us</a>
         </li>
          <li class="nav-item">
-            <a href="contactus.html" class="nav-link" >Contact Us</a>
+            <a href="#" class="nav-link" >Contact Us</a>
         </li>
 
     </ul>
 
 
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-pills">
         <li class="active">
             <a href="#" >HOME</a>
         </li>
