--- a/Session-3/function.html
+++ b/Session-3/function.html
@@ -17,7 +17,6 @@
         function add(a,b){
             var num1=a+b;  //3+5=8
             var num2=a*b; //3*5=15
-
             return num1+num2; //8+15=23
         }
         //calling a function
@@ -25,6 +24,7 @@
 
         var result= add(3,5);
         console.log('Result is: '+result);
+       // console.log('Result is: '+add(3,5));
     </script>
 </body>
 </html>
