--- a/Phase-5/Session-3/Phase-5_Session-3/test-output/old/Default suite/classes.html
+++ b/Phase-5/Session-3/Phase-5_Session-3/test-output/old/Default suite/classes.html
@@ -4,15 +4,31 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.simplilearn.demo.Facebook</td>
+<td>com.simplilearn.demo.GroupTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>welcome</td>
-<td>&nbsp;</td></tr>
+<td>loginwithChrome</td>
+<td>Chrome </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>launchFirefox</td>
+<td>firefox </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginwithFirefox</td>
+<td>firefox </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>launchChrome</td>
+<td>Chrome </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -20,16 +36,8 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>beforeMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterMethod</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
