--- a/Phase-5/Session-3/Phase-5_Session-3/test-output/old/Default suite/methods-alphabetical.html
+++ b/Phase-5/Session-3/Phase-5_Session-3/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7362d6">  <td>22/05/13 11:41:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Facebook.afterMethod()[pri:0, instance:com.simplilearn.demo.Facebook@6973b51b]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@2088371948</td>   <td></td> </tr>
-<tr bgcolor="7362d6">  <td>22/05/13 11:41:31</td>   <td>-13631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Facebook.beforeMethod()[pri:0, instance:com.simplilearn.demo.Facebook@6973b51b]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@2088371948</td>   <td></td> </tr>
-<tr bgcolor="7362d6">  <td>22/05/13 11:41:44</td>   <td>-20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Facebook.welcome()[pri:0, instance:com.simplilearn.demo.Facebook@6973b51b]">welcome</td> 
-  <td>main@2088371948</td>   <td></td> </tr>
+<tr bgcolor="d4bf7e">  <td>22/05/13 12:05:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.launchChrome()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">launchChrome</td> 
+  <td>main@1084502906</td>   <td></td> </tr>
+<tr bgcolor="d4bf7e">  <td>22/05/13 12:05:29</td>   <td>9088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.launchFirefox()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">launchFirefox</td> 
+  <td>main@1084502906</td>   <td></td> </tr>
+<tr bgcolor="d4bf7e">  <td>22/05/13 12:05:29</td>   <td>9151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.loginwithChrome()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">loginwithChrome</td> 
+  <td>main@1084502906</td>   <td></td> </tr>
+<tr bgcolor="d4bf7e">  <td>22/05/13 12:05:30</td>   <td>10123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.loginwithFirefox()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">loginwithFirefox</td> 
+  <td></td>   <td></td> </tr>
 </table>
