--- a/Phase-5/Session-3/Phase-5_Session-3/test-output/old/Default suite/classes.html
+++ b/Phase-5/Session-3/Phase-5_Session-3/test-output/old/Default suite/classes.html
@@ -4,37 +4,29 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.simplilearn.demo.GroupTest</td>
+<td>com.simplilearn.demo.AssertionDemo</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginwithChrome</td>
-<td>Chrome </td>
-</tr>
+<td>tittleTest</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>launchFirefox</td>
-<td>firefox </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginwithFirefox</td>
-<td>firefox </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>launchChrome</td>
-<td>Chrome </td>
-</tr>
+<td>login</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
