--- a/Phase-5/Session-3/Phase-5_Session-3/test-output/old/Default suite/methods-alphabetical.html
+++ b/Phase-5/Session-3/Phase-5_Session-3/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d4bf7e">  <td>22/05/13 12:05:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.launchChrome()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">launchChrome</td> 
-  <td>main@1084502906</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/13 12:05:29</td>   <td>9088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.launchFirefox()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">launchFirefox</td> 
-  <td>main@1084502906</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/13 12:05:29</td>   <td>9151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.loginwithChrome()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">loginwithChrome</td> 
-  <td>main@1084502906</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/13 12:05:30</td>   <td>10123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.loginwithFirefox()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">loginwithFirefox</td> 
-  <td></td>   <td></td> </tr>
+<tr bgcolor="67a0d6">  <td>22/05/13 12:31:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AssertionDemo.beforeMethod()[pri:0, instance:com.simplilearn.demo.AssertionDemo@42e99e4a]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1276261147</td>   <td></td> </tr>
+<tr bgcolor="67a0d6">  <td>22/05/13 12:31:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AssertionDemo.beforeMethod()[pri:0, instance:com.simplilearn.demo.AssertionDemo@42e99e4a]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1276261147</td>   <td></td> </tr>
+<tr bgcolor="67a0d6">  <td>22/05/13 12:31:27</td>   <td>-2421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionDemo.login()[pri:0, instance:com.simplilearn.demo.AssertionDemo@42e99e4a]">login</td> 
+  <td>main@1276261147</td>   <td></td> </tr>
+<tr bgcolor="67a0d6">  <td>22/05/13 12:31:31</td>   <td>2102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionDemo.tittleTest()[pri:0, instance:com.simplilearn.demo.AssertionDemo@42e99e4a]">tittleTest</td> 
+  <td>main@1276261147</td>   <td></td> </tr>
 </table>
